Mon Sep 28 
=============================
  Inherit ISOException from StandardError
  Add bundler stuff, and dev dependancy for test-unit which was removed
     for no good reason in 2.2

0.1.6
=========
  restrict to ruby < 2
  allow removal of empty fields
  Thanks: Lasse Skindstad Ebert https://github.com/lasseebert

0.1.5
=========
  MMDD Codec
  BCD encoder checks odd length fields

0.1.4
=========
  Gemspec
  reformatting

0.1.3
==========
  bugfix, field definitions not duplicated
  THANKS: Toni Lyytikäinen
0.1.2
==========
  branched from original 0.1.1;
  cleaned-up files;
  put all stuff into ISO8583 namespace (module)
  rearrange files under `lib` dir