@@ -2,3 +2,4 @@ Tim Becker (tim@kuriositaet.de)
 Slava Kravchenko (cordawyn@gmail.com)
 Tonni Aagesen (https://github.com/ta)
 Lasse Skindstad Ebert (https://github.com/lasseebert)
+Joel Ibaceta (https://github.com/joelibaceta)
