@@ -27,7 +27,7 @@ module ISO8583
                    raise ISO8583Exception.new("Cannot determine the length of '#{name}' field")
                  end
 
-      raw_value = raw[0,len]
+      raw_value = raw.byteslice(0,len)
       
       # make sure we have enough data ...
       if raw_value.length != len
@@ -35,7 +35,7 @@ module ISO8583
         raise ISO8583ParseException.new(mes)
       end
 
-      rest = raw[len, raw.length]
+      rest = raw.byteslice(len, raw.length)
       begin
         real_value = codec.decode(raw_value)
       rescue
@@ -70,7 +70,7 @@ module ISO8583
                 when Fixnum
                   raise ISO8583Exception.new("Too long: #{value} (#{name})! length=#{length}")  if encoded_value.length > length
                   raise ISO8583Exception.new("Too short: #{value} (#{name})! length=#{length}") if encoded_value.length < length
-                  "" 
+                  "".force_encoding("ASCII-8BIT")
                 when Field
                   raise ISO8583Exception.new("Max lenth exceeded: #{value}, max: #{max}") if max && encoded_value.length > max
                   length.encode(encoded_value.length)
